--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>React Parcel Starter</title>
+    <title>Phyllotaxis Spiral</title>
   </head>
 
   <body>
